--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,7 @@
     "name": "server",
     "version": "1.0.0",
     "description": "server for aa",
-    "main": "index.js",
+    "main": "server.js",
     "type": "module",
     "scripts": {
         "dev": "nodemon server.js",
