--- a/backend/package.json
+++ b/backend/package.json
@@ -2,11 +2,11 @@
     "name": "server",
     "version": "1.0.0",
     "description": "server for aa",
-    "main": "server.js",
+    "main": "index.js",
     "type": "module",
     "scripts": {
-        "dev": "nodemon server.js",
-        "start": "node server.js",
+        "dev": "nodemon index.js",
+        "start": "node index.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "",
